Fixed alignment of copy; removed other extra text

--- a/css/style.css
+++ b/css/style.css
@@ -241,8 +241,7 @@ section#youthlive {
 }
 
 .camp-text {
-	font-size: 1.5rem;
-	line-height: 2.25rem;
+	font-size: 1rem;
 }
 
 section#speaker {
